refactor platform: bind the process mediator daemon to libc with the FFM API
`MachUtil` and `UnixUtil` in `intellij.execution.process.mediator.daemon` were
the module's only JNA users. Rewrite their private `Library` interfaces as
`java.lang.foreign` downcalls and drop `intellij.libraries.jna` from the module.
The daemon classpath no longer lists the JNA jar, and the launcher no longer
forwards `jna.boot.library.path`.

The bindings keep the shape of the old code. Mach ports and kernel return codes
are 32-bit integers. The global `bootstrap_port` is a data symbol of libSystem,
read and written through a 4-byte segment, which replaces the
`Library.Handler` and `NativeLibrary.getGlobalVariableAddress` internals.
`sigset_t` and `struct sigaction` stay opaque buffers of 256 and 320 bytes, and
the handler is still the first field. `errno` comes from
`Linker.Option.captureCallState`, so a failed call reports the same
`strerror` text as before. A lookup failure surfaces as a `LinkageError`, which
`NativeCall.tryRun` already catches and prints.

The daemon and the trampoline are separate JVMs, so both launch paths now pass
`--enable-native-access=ALL-UNNAMED`. Without it, the first downcall prints a
warning to stderr on Java 25.

Verified on macOS with a standalone probe of the same descriptors: setsid,
sigfillset, sigprocmask, sigaction, signal, strerror, mach_task_self,
bootstrap_get_root and bootstrap_look_up_per_user all return the expected
values. `task_set_special_port` is proven by lookup only, because it moves the
probing process. The Linux path is unproven here. Built with `bazel build` for
the mediator and elevation modules.


GitOrigin-RevId: 3ff2edf0e1b4eb49dcbb4bfc117c7e041e1f7198